fixed menu bug on small screens /home

--- a/workb/src/assets/components/home/_global.scss
+++ b/workb/src/assets/components/home/_global.scss
@@ -156,6 +156,7 @@ img
 .navbar-default .nav li a.current
     {
         color: #28a7e9;
+        cursor: pointer;
     }
 
 .navbar-default .navbar-toggle
